TestSuite/errors/err0036.pas
procedure Test;
type IInt = interface
end;
begin
end;

begin
end.